# anime-scraper

./: .gitignore  README.md  pyproject.toml
anime_scraper/: __init__.py  cache.py  cli.py  downloader.py  grouper.py  metadata.py  models.py  scraper.py  utils.py
tests/: __init__.py  conftest.py  test_cache.py  test_cli.py  test_downloader.py  test_grouper.py  test_integration.py  test_metadata.py  test_models.py  test_scraper.py  test_utils.py
